--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: TaggerNationLib
+name: LabAide
 version: '${project.version}'
-main: com.taggernation.taggernationlib.TaggerNationLib
+main: in.arcadelabs.labaide.LabAide
 api-version: 1.13
