--- a/pom.xml
+++ b/pom.xml
@@ -29,19 +29,23 @@
                     <relocations>
                         <relocation>
                             <pattern>net.kyori</pattern>
-                            <shadedPattern>in.arcadelabs.libs.kyori</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>in.arcadelabs.labaide.libs.kyori</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>com.google.code.gson</pattern>
-                            <shadedPattern>in.arcadelabs.libs.gson</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>in.arcadelabs.labaide.libs.gson</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>in.arcadelabs.libs.aikar.acf</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>in.arcadelabs.labaide.libs.aikar.acf</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.locales</pattern>
-                            <shadedPattern>in.arcadelabs.libs.aikar.locales</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>in.arcadelabs.labaide.libs.aikar.locales</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>dev.dejvokep.boostedyaml</pattern>
+                            <shadedPattern>in.arcadelabs.labaide.libs.boostedyaml</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -174,6 +178,11 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>5.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.dejvokep</groupId>
+            <artifactId>boosted-yaml</artifactId>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 </project>
