--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <jar.finalName>${project.name}-v${project.version}</jar.finalName>
     </properties>
     <build>
-        <finalName>LabAide</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
