--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,4 +18,4 @@ jobs:
               "password": "${{ secrets.REPO_TOKEN }}"
             }]
       - name: Publish with Maven
-        run: mvn deploy
+        run: mvn deploy -X
