--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           servers: |
             [{
-              "id": "reposilite-repository",
+              "id": "arcadelabs-mvn-releases",
               "username": "${{ secrets.REPO_NAME }}",
               "password": "${{ secrets.REPO_TOKEN }}"
             }]
