--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,11 +11,6 @@ jobs:
           java-version: 18
       - uses: s4u/maven-settings-action@v2.6.0
         with:
-          servers: |
-            [{
-              "id": "arcadelabs-mvn-releases",
-              "username": "${{ secrets.REPO_NAME }}",
-              "password": "${{ secrets.REPO_TOKEN }}"
-            }]
+          servers: '[{"id": "arcadelabs-mvn-releases", "username": "${{ secrets.REPO_NAME }}", "password": "${{ secrets.REPO_TOKEN }}"}]'
       - name: Publish with Maven
         run: mvn deploy -X
