--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>in.arcadelabs</groupId>
+    <groupId>in.arcadelabs.labaide</groupId>
     <artifactId>LabAide</artifactId>
     <version>2.3</version>
     <packaging>jar</packaging>
@@ -136,7 +136,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.9.0</version>
+            <version>2.10</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
