--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
 
     <groupId>in.arcadelabs.labaide</groupId>
     <artifactId>LabAide</artifactId>
-    <version>2.4</version>
+    <version>2.6</version>
     <packaging>jar</packaging>
+    <url>https://github.com/arcadelabs/LabAide</url>
 
     <name>LabAide</name>
 
@@ -18,6 +19,56 @@
         <maven.compiler.target>17</maven.compiler.target>
         <jar.finalName>${project.name}-v${project.version}</jar.finalName>
     </properties>
+
+    <organization>
+        <name>ArcadeLabs Studios</name>
+        <url>https://github.com/arcadelabs</url>
+    </organization>
+
+    <developers>
+        <developer>
+            <name>Aniket</name>
+            <email>roninowns@gmail.com</email>
+            <organization>ArcadeLabs Studios</organization>
+            <organizationUrl>https://github.com/arcadelabs</organizationUrl>
+            <timezone>IST</timezone>
+        </developer>
+        <developer>
+            <name>Infinity</name>
+            <email>xa583179@gmail.com</email>
+            <organization>ArcadeLabs Studios</organization>
+            <organizationUrl>https://github.com/arcadelabs</organizationUrl>
+            <timezone>IST</timezone>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License v3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
+            <distribution>manual</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:arcadelabs/LabAide.git</connection>
+        <developerConnection>git@github.com:arcadelabs/LabAide.git</developerConnection>
+        <url>git@github.com:arcadelabs/LabAide.git</url>
+    </scm>
+
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/arcadelabs/LabAide/issues</url>
+    </issueManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>arcadelabs-mvn-releases</id>
+            <name>ArcadeLabs Repository</name>
+            <url>https://repo.zorino.in/releases</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
@@ -68,6 +119,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <stylesheetfile>${basedir}/src/main/javadoc/dracula-javadoc8.css</stylesheetfile>
+                    <show>public</show>
+                    <nohelp>true</nohelp>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -76,14 +137,6 @@
             </resource>
         </resources>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>arcadelabs-mvn-releases</id>
-            <name>ArcadeLabs Repository</name>
-            <url>https://repo.zorino.in/releases</url>
-        </repository>
-    </distributionManagement>
 
     <repositories>
         <repository>
@@ -136,7 +189,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.10</version>
+            <version>2.10.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -148,7 +201,7 @@
         <dependency>
             <groupId>xyz.xenondevs</groupId>
             <artifactId>particle</artifactId>
-            <version>1.8.1</version>
+            <version>1.8.3</version>
         </dependency>
         <dependency>
             <groupId>dev.dejvokep</groupId>
