--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>in.arcadelabs.labaide</groupId>
     <artifactId>LabAide</artifactId>
-    <version>2.8</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <url>https://github.com/arcadelabs/LabAide</url>
     <modules>
@@ -70,10 +70,15 @@
 
     <distributionManagement>
         <repository>
-            <id>arcadelabs-mvn-releases</id>
-            <name>ArcadeLabs Repository</name>
-            <url>https://repo.zorino.in/releases</url>
+            <id>arcadelabs-repository-releases</id>
+            <name>ArcadeLabs Maven Repository</name>
+            <url>https://repo.arcadelabs.in/releases</url>
         </repository>
+        <snapshotRepository>
+            <id>arcadelabs-repository-snapshots</id>
+            <name>ArcadeLabs Maven Repository</name>
+            <url>https://repo.arcadelabs.in/snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <repositories>
