--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
 name: Publish LabAide to Maven repository
 run-name: Deploy to Maven repo by @${{ github.actor }}
-on: [workflow_dispatch, release]
+on: [ workflow_dispatch ]
 jobs:
   publish:
-    name: Publish
+    name: Publish [mvn-releases]
     runs-on: ubuntu-latest
     steps:
-      - name: Set up actions checkout 
+      - name: Set up actions checkout
         uses: actions/checkout@v2
       - name: Set up JDK 18
         uses: actions/setup-java@v1
@@ -15,6 +15,6 @@ jobs:
       - name: Set up maven credentials
         uses: s4u/maven-settings-action@v2.6.0
         with:
-          servers: '[{"id": "arcadelabs-mvn-releases", "username": "${{ secrets.REPO_NAME }}", "password": "${{ secrets.REPO_TOKEN }}"}]'
+          servers: '[{"id": "arcadelabs-repository-releases", "username": "${{ secrets.REPO_NAME }}", "password": "${{ secrets.REPO_TOKEN }}"}]'
       - name: Publish with Maven
         run: mvn deploy
