--- a/items-aide/pom.xml
+++ b/items-aide/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>in.arcadelabs.labaide</groupId>
         <artifactId>LabAide</artifactId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
 
     <artifactId>items-aide</artifactId>
@@ -34,5 +34,13 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
